<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pacheco.saul.racersofcloud.Principal">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_principal">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imgEscudoPrincipal"
            android:contentDescription="@string/escudo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_margin="30dp"
            android:contextClickable="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_pilotoPrincipal"
            android:contentDescription="@string/piloto"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:scaleType="fitEnd"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_cochePirncipal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/coche"
            android:scaleType="fitEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_consejos"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#b4000000" />

    </RelativeLayout>
</FrameLayout>
