<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pacheco.saul.racersofcloud.Titulo">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_frg_titulo_piloto"
                android:id="@+id/tv_piloto"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#ffffff"
                android:textIsSelectable="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="70"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="22"
                android:layout_gravity="center"
                android:gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_tuercasTitulo"
                    android:scaleType="centerCrop"
                    android:minHeight="15dp"
                    android:minWidth="15dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/str_frg_titulo_tuercas"
                    android:id="@+id/tv_tuercas"
                    android:textColor="#ffffff"
                    android:textIsSelectable="false"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="28"
                android:layout_gravity="center"
                android:gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_trofeosTitulo"
                    android:scaleType="centerCrop"
                    android:minHeight="15dp"
                    android:minWidth="15dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/str_frg_titulo_trofeos"
                    android:id="@+id/tv_trofeos"
                    android:textColor="#ffffff"
                    android:textIsSelectable="false"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_escudoTitulo"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/str_frg_titulo_equipo"
                    android:id="@+id/tv_equipo"
                    android:textColor="#ffffff"
                    android:textIsSelectable="false"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
